refactor: 完善部署配置与新增多类LLM业务能力
1. 更新部署文档与配置：将.env.example替换为实际.env，移除冗余示例配置
2. 新增本地开发环境变量配置文件.env.local
3. 新增多类业务DTO与LLM提示模板：PR描述、SQL优化、重构建议、变更影响分析等
4. 重构安全过滤器配置，替换旧的过滤器类
5. 新增AI扫描配置解析与前端扫描参数传递
6. 新增知识库问答、测试失败分析等控制器与Agent
7. 优化单元测试与LLM调用异常处理